DT-1148 fix for social icons wrap but couldn't replicate in editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -294,6 +294,14 @@ button.btn,
 	}
 }
 
+// Social Icons
+
+.widget.socialicons {
+	span {
+		display: inline-block;
+	}
+}
+
 .basket-summary-empty-cta,
 .ecombasket-summary-link {
 	display: inline-block;
